Fix execute Query 'Results' and 'Query status' section controls gets truncated at 200% resize mode of 'Query1' blade (#1105)
* Fix a11y querytab results section zoom section issue

* Update test smapshot

* Update test snapshot

* Resolved test case issue

--- a/less/documentDB.less
+++ b/less/documentDB.less
@@ -2357,6 +2357,8 @@ a:link {
   height: 100%;
   flex-grow: 1;
   overflow: hidden;
+  min-height: 300px;
+  overflow-y: scroll;
 }
 
 .tabs {
@@ -2832,7 +2834,7 @@ a:link {
 
 #explorerNotificationConsole {
   z-index: 1000;
-  overflow-y:auto;
+  overflow-y: auto;
   overflow-x: clip;
 }
 
